--- a/content/reaction_networks/integration-example.ipynb
+++ b/content/reaction_networks/integration-example.ipynb
@@ -27,13 +27,15 @@
    "id": "f9b6ba50-0c6f-459f-8a48-162cdee5c3fc",
    "metadata": {},
    "source": [
-    "We'll include the rates for all 4 CNO cycles + hot-CNO, as listed here:\n",
+    "We can use ![pynucastro](https://github.com/pynucastro/pynucastro) to generate the righthand side function for an astrophysical reaction network.\n",
+    "\n",
+    "We'll create a CNO network that has the rates for all 4 CNO cycles + hot-CNO, as listed here:\n",
     "https://reaclib.jinaweb.org/popularRates.php"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "2cd84577-5540-4e2c-b572-b5964f654062",
    "metadata": {},
    "outputs": [],
@@ -63,8 +65,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "900a565a-0bb7-4ee6-b30c-2dda77f4910f",
+   "metadata": {},
+   "source": [
+    "We can visualize the network and rates linking the nuclei"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "dc5d2750-6612-4662-aef2-12e968685188",
    "metadata": {},
    "outputs": [
@@ -86,8 +96,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51641a40-f7f1-40cb-be59-56f53deab92e",
+   "metadata": {},
+   "source": [
+    "pynucastro can write out the python code needed to evaluate the reaction rates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "e217e478-0974-45b1-88fb-f93ebfbc65f1",
    "metadata": {},
    "outputs": [],
@@ -100,7 +118,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "b0615751-cb85-4c93-89e5-d1b4b4abbb93",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -688,8 +710,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca5a6cb8-df22-4f8f-9950-10b5425c366b",
+   "metadata": {},
+   "source": [
+    "Now we can import the network that was just created"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "0956c967-0ce5-4173-8470-b9f7e8bd2f3e",
    "metadata": {},
    "outputs": [],
@@ -698,9 +728,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82cd91f5-1734-4333-a68d-e6bc2bb0a455",
+   "metadata": {},
+   "source": [
+    "We'll use the BDF solver from SciPy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "79aeec7d-1ce4-4305-8cdd-66256390a3fe",
+   "execution_count": 25,
+   "id": "f156f0a1-a2e0-41c4-891b-460679ab9e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,13 +746,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b1ba5a4-1b92-4d9c-90ef-3a3140691365",
+   "metadata": {},
+   "source": [
+    "Now we'll set the thermodynamic conditions.  We initialize mass fractions and then convert to molar fractions, since that's what the RHS uses"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "97d3fe2c-f9a2-41ae-ad03-047e38092864",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmax = 1.e20\n",
     "rho = 150\n",
     "T = 1.5e7\n",
     "\n",
@@ -728,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "6e4ee9d6-7422-4285-8844-b48ed1c67861",
    "metadata": {},
    "outputs": [
@@ -741,7 +786,7 @@
        "       0.        ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,17 +797,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "2471420a-e667-4748-b2c1-e4b437d9f540",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol = solve_ivp(cno.rhs, [0, tmax], Y0, method=\"BDF\", dense_output=True, args=(rho, T), rtol=1.e-6, atol=1.e-6)"
+    "tmax = 1.e20\n",
+    "\n",
+    "sol = solve_ivp(cno.rhs, [0, tmax], Y0, method=\"BDF\",\n",
+    "                dense_output=True, args=(rho, T), rtol=1.e-6, atol=1.e-6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "48502b17-e789-4b90-9f33-8a5e9bf4c4e6",
    "metadata": {},
    "outputs": [
@@ -773,7 +821,7 @@
        "     nfev: 345\n",
        "     njev: 20\n",
        "      nlu: 63\n",
-       "      sol: <scipy.integrate._ivp.common.OdeSolution object at 0x7f544860a340>\n",
+       "      sol: <scipy.integrate._ivp.common.OdeSolution object at 0x7f54490ee5b0>\n",
        "   status: 0\n",
        "  success: True\n",
        "        t: array([0.00000000e+00, 1.00000000e-04, 2.00000000e-04, 1.20000000e-03,\n",
@@ -829,7 +877,7 @@
        " y_events: None"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,8 +887,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bda76fe-4069-42f8-962f-9c6e919b2f29",
+   "metadata": {},
+   "source": [
+    "Now we can plot the mass fractions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "eed152d0-f569-482c-bcef-4040dcc4c2ad",
    "metadata": {},
    "outputs": [
