--- a/content/reaction_networks/integration-example.ipynb
+++ b/content/reaction_networks/integration-example.ipynb
@@ -27,7 +27,7 @@
    "id": "f9b6ba50-0c6f-459f-8a48-162cdee5c3fc",
    "metadata": {},
    "source": [
-    "We can use ![pynucastro](https://github.com/pynucastro/pynucastro) to generate the righthand side function for an astrophysical reaction network.\n",
+    "We can use [pynucastro](https://github.com/pynucastro/pynucastro) to generate the righthand side function for an astrophysical reaction network.\n",
     "\n",
     "We'll create a CNO network that has the rates for all 4 CNO cycles + hot-CNO, as listed here:\n",
     "https://reaclib.jinaweb.org/popularRates.php"
