--- a/content/reaction_networks/integration-example.ipynb
+++ b/content/reaction_networks/integration-example.ipynb
@@ -30,7 +30,7 @@
     "We can use [pynucastro](https://github.com/pynucastro/pynucastro) to generate the righthand side function for an astrophysical reaction network.\n",
     "\n",
     "We'll create a CNO network that has the rates for all 4 CNO cycles + hot-CNO, as listed here:\n",
-    "https://reaclib.jinaweb.org/popularRates.php"
+    "[https://reaclib.jinaweb.org/popularRates.php](https://reaclib.jinaweb.org/popularRates.php)"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "id": "b0615751-cb85-4c93-89e5-d1b4b4abbb93",
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [
