--- a/content/elliptic_multigrid/elliptic-problems.ipynb
+++ b/content/elliptic_multigrid/elliptic-problems.ipynb
@@ -51,8 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: not any set of boundary conditions is allowed.\n",
-    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    \n",
+    "Not any set of boundary conditions is allowed.\n",
     "Consider $f = 0$, so our Poisson equation (is the Laplace equation):\n",
     "\n",
     "$$\\phi^{\\prime\\prime} = 0$$\n",
@@ -61,22 +62,24 @@
     "\n",
     "$$\\phi(x) = a x + b$$\n",
     "\n",
-    "if we try to enforce different inhomogeneous on each end, then we get conflicting values for the slope&mdash;this is unsolvable."
+    "if we try to enforce different inhomogeneous on each end, then we get conflicting values for the slope&mdash;this is unsolvable.\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the general case, \n",
+    "To understand solvable boundary conditions for the general case, \n",
     "\n",
     "$$\\nabla^2 \\phi = f$$\n",
     "\n",
-    "we integrate over the domain\n",
+    "we start by integrating over the domain\n",
     "\n",
     "$$\\int_\\Omega \\nabla^2 \\phi d\\Omega = \\int_{\\partial \\Omega} \\nabla \\phi \\cdot {\\bf n} dS = \\int_\\Omega f d\\Omega$$\n",
     "\n",
-    "If we have homogeneous Neumann BCs on all sides, $\\nabla phi \\cdot {\\bf n} = 0$, then the source, $f$, must satisfy\n",
+    "If we have homogeneous Neumann BCs on all sides, $\\nabla \\phi \\cdot {\\bf n} = 0$, then the source, $f$, must satisfy\n",
     "\n",
     "$$\\int_\\Omega f d\\Omega = 0$$\n",
     "\n",
@@ -121,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
