--- a/content/elliptic_multigrid/elliptic-relaxation.ipynb
+++ b/content/elliptic_multigrid/elliptic-relaxation.ipynb
@@ -383,29 +383,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We see that as we increase the number of smoothing iterations, we get closer to the analytic solution.  Also note that the solution appears to be respecting our boundary conditions well.\n",
+    "\n",
+    "However, even after 1000 smoothing iterations, we are still far from the true solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "**Exercise:**\n",
     "    \n",
-    "For the function in the previous exercise, perform a composite integral using the trapezoid and Simpson's rule for $N = 2, 4, 8, 16, 32$.\n",
-    "Compute the error with respect to the analytic solution and make a plot of the error vs. $N$ for both methods.  Do the errors follow the scaling shown in the expressions above?\n",
-    "    \n",
+    "Code up Jacobi relaxation and see how it compares to G-S on this problem.\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
