more work on smoothing

--- a/content/elliptic_multigrid/elliptic-relaxation.ipynb
+++ b/content/elliptic_multigrid/elliptic-relaxation.ipynb
@@ -374,7 +374,8 @@
     "    # reset phi to 0 for the next number of iterations\n",
     "    g.phi[:] = 0.0\n",
     "\n",
-    "ax.plot(g.x[g.ilo:g.ihi+1], analytic(g.x[g.ilo:g.ihi+1]), ls=\":\", color=\"0.5\", label=\"analytic\")\n",
+    "ax.plot(g.x[g.ilo:g.ihi+1], analytic(g.x[g.ilo:g.ihi+1]), ls=\":\",\n",
+    "        color=\"0.5\", label=\"analytic\")\n",
     "\n",
     "ax.legend()"
    ]
@@ -417,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
