--- a/content/elliptic_multigrid/elliptic-residual.ipynb
+++ b/content/elliptic_multigrid/elliptic-residual.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "    def norm(self, e):\n",
     "        \"\"\"compute the L2 norm of e that lives on our grid\"\"\"\n",
-    "        return np.sqrt(self.dx * np.sum(e[g.ilo:g.ihi+1]**2))\n",
+    "        return np.sqrt(self.dx * np.sum(e[self.ilo:self.ihi+1]**2))\n",
     "    \n",
     "    def residual_norm(self):\n",
     "        \"\"\"compute the residual norm\"\"\"\n",
@@ -288,25 +288,14 @@
     "\n",
     "**Exercise:**\n",
     "    \n",
-    "For the function in the previous exercise, perform a composite integral using the trapezoid and Simpson's rule for $N = 2, 4, 8, 16, 32$.\n",
-    "Compute the error with respect to the analytic solution and make a plot of the error vs. $N$ for both methods.  Do the errors follow the scaling shown in the expressions above?\n",
+    "Solve the problem \n",
+    "    \n",
+    "$$\\phi^{\\prime\\prime} = -4\\pi^2 \\cos(2\\pi x)$$\n",
+    "    \n",
+    "on $[0, 1]$ with homogeneous Neumann boundary conditions.\n",
     "    \n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -325,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
