--- a/content/elliptic_multigrid/elliptic-problems.ipynb
+++ b/content/elliptic_multigrid/elliptic-problems.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "$$\\phi(x) = a x + b$$\n",
     "\n",
-    "if we try to enforce different inhomogeneous on each end, then we get conflicting values for the slope&mdash;this is unsolvable.\n",
+    "if we try to enforce different inhomogeneous Neumann boundary conditions on each end, then we get conflicting values for the slope&mdash;this is unsolvable.\n",
     "    \n",
     "</div>"
    ]
@@ -103,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
