split the grid class out

--- a/content/elliptic_multigrid/multigrid/multigrid-two-grid.ipynb
+++ b/content/elliptic_multigrid/multigrid/multigrid-two-grid.ipynb
@@ -71,7 +71,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: solid; padding: 10px; margin: 2em; background: #dddddd\">\n",
+    "<div style=\"border: solid; padding: 10px; width: 80%; margin: 0 auto; background: #dddddd\">\n",
+    "    \n",
     "* Smooth for $N_\\mathrm{smooth}$ iterations on the fine grid, solving $\\nabla^2 \\phi = f$ to get an approximation $\\tilde{\\phi}$\n",
     "\n",
     "* Compute the residual, on the fine grid:\n",
@@ -96,6 +97,13 @@
     "  \n",
     "* This correction may have introduced some short wavelength noise (from the prolongation), so smooth $\\nabla^2 \\phi = f$ on the fine grid for $N_\\mathrm{smooth}$ iterations.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For now, to solve the error equation, we'll resort to simply smoothing until all of residual is below our desired tolerance.  In a little bit though, we'll see that we can just do this procedure recursively for that step."
    ]
   },
   {
