--- a/content/elliptic_multigrid/relaxation/elliptic-residual.ipynb
+++ b/content/elliptic_multigrid/relaxation/elliptic-residual.ipynb
@@ -157,7 +157,7 @@
     "    if tol is None:\n",
     "        test = iter < max_iters\n",
     "    else:\n",
-    "        test = iter < max_iter and r > tol * fnorm\n",
+    "        test = iter < max_iters and r > tol * fnorm\n",
     "\n",
     "    g.fill_bcs()\n",
     "\n",
@@ -183,10 +183,10 @@
     "        if tol is None:\n",
     "            test = iter < max_iters\n",
     "        else:\n",
-    "            test = iter < max_iter and r > tol * fnorm\n",
+    "            test = iter < max_iters and r > tol * fnorm\n",
     "\n",
     "    if tol is not None and iter >= max_iters:\n",
-    "        raise TooManyIterations(f\"too many iteration, niter = {iter}\")\n",
+    "        raise TooManyIterations(f\"too many iterations, niter = {iter}\")\n",
     "        \n",
     "    return res_norm, true_norm"
    ]
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
