add another fig

--- a/content/elliptic_multigrid/multigrid/multigrid-vcycles.ipynb
+++ b/content/elliptic_multigrid/multigrid/multigrid-vcycles.ipynb
@@ -51,7 +51,11 @@
     "\n",
     "Our two-grid correction code that we previously implemented is now called `vcycle()`, and it will apply the two-grid correction on all grids except the very coarsest, on which it instead just smooths.\n",
     "\n",
-    "Finally, there is one new function here, `solve()`.  This calls `vcycle()` repeatedly until the error is below our desired tolerance."
+    "Finally, there is one new function here, `solve()`.  This calls `vcycle()` repeatedly until the error is below our desired tolerance.\n",
+    "\n",
+    "The overall flow looks like:\n",
+    "\n",
+    "![vcycle](vcycle.png)"
    ]
   },
   {
@@ -675,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
