--- a/content/elliptic_multigrid/intro/elliptic-problems.ipynb
+++ b/content/elliptic_multigrid/intro/elliptic-problems.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "$$\\phi^{\\prime\\prime} = f$$\n",
     "\n",
-    "on the domain $[0, a]$.\n",
+    "on the domain $[a, b]$.\n",
     "\n",
     "We can supply boundary conditions as\n",
     "\n",
@@ -89,7 +89,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
