--- a/content/elliptic_multigrid/multigrid/multigrid-restrict-prolong.ipynb
+++ b/content/elliptic_multigrid/multigrid/multigrid-restrict-prolong.ipynb
@@ -49,7 +49,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Restriction"
    ]
@@ -63,33 +65,6 @@
     "$$\\phi^c_j = \\frac{1}{2} \\left ( \\phi^f_i + \\phi^f_{i+1} \\right )$$\n",
     "\n",
     "This is also second-order accurate at the coarse cell cell-center."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prolongation\n",
-    "\n",
-    "To initialize the two fine cells from a coarse cell, we could do simple direct injection:\n",
-    "\n",
-    "$$\\phi_i^f = \\phi_j^c$$\n",
-    "\n",
-    "$$\\phi_{i+1}^f = \\phi_j^c$$\n",
-    "\n",
-    "This is only first order accurate.  A second-order accurate method of initializing the fine data starts with reconstructing the coarse data as a line:\n",
-    "\n",
-    "$$\\phi^{\\mathrm{coarse}}(x) = m_x (x - x_j) + \\phi^c_j$$\n",
-    "\n",
-    "with\n",
-    "\n",
-    "$$m_x = \\frac{\\phi^c_{j+1} - \\phi^c_{j-1}}{2\\Delta x}$$\n",
-    "\n",
-    "Then we integrate this line over the two fine cells to find their values:\n",
-    "\n",
-    "$$\\phi^f_j = \\phi^c_i - \\frac{\\Delta x}{4} m_x$$\n",
-    "\n",
-    "$$\\phi^f_{j+1} = \\phi^c_i + \\frac{\\Delta x}{4} m_x$$"
    ]
   },
   {
