--- a/content/elliptic_multigrid/multigrid/multigrid-restrict-prolong.ipynb
+++ b/content/elliptic_multigrid/multigrid/multigrid-restrict-prolong.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Restriction"
    ]
@@ -71,6 +69,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Prolongation\n",
+    "\n",
+    "To initialize the two fine cells from a coarse cell, we could do simple direct injection:\n",
+    "\n",
+    "$$\\phi_i^f = \\phi_j^c$$\n",
+    "\n",
+    "$$\\phi_{i+1}^f = \\phi_j^c$$\n",
+    "\n",
+    "This is only first order accurate.  A second-order accurate method of initializing the fine data starts with reconstructing the coarse data as a line:\n",
+    "\n",
+    "$$\\phi^{\\mathrm{coarse}}(x) = m_x (x - x_j) + \\phi^c_j$$\n",
+    "\n",
+    "with\n",
+    "\n",
+    "$$m_x = \\frac{\\phi^c_{j+1} - \\phi^c_{j-1}}{2\\Delta x}$$\n",
+    "\n",
+    "Then we integrate this line over the two fine cells to find their values:\n",
+    "\n",
+    "$$\\phi^f_j = \\phi^c_i - \\frac{\\Delta x}{4} m_x$$\n",
+    "\n",
+    "$$\\phi^f_{j+1} = \\phi^c_i + \\frac{\\Delta x}{4} m_x$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Implementation\n",
     "\n",
     "Let's create a basic grid class that implements this.  We'll assume homogeneous Dirichlet boundary conditions."
@@ -78,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8., -8.])"
+       "array([-1.,  1.,  2.,  3.,  4.,  5.,  6., -6.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,18 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([-0.625,  0.625,  1.375,  1.75 ,  2.25 ,  2.75 ,  3.25 ,  3.75 ,\n",
-       "        4.25 ,  4.75 ,  5.25 ,  5.75 ,  6.25 ,  6.75 ,  7.25 ,  9.875,\n",
-       "        6.125, -6.125])"
+       "        4.25 ,  4.75 ,  5.25 ,  7.375,  4.625, -4.625])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,16 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 0.])"
+       "array([0., 1., 2., 3., 4., 5., 6., 0.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
