--- a/content/stars/lane-emden.ipynb
+++ b/content/stars/lane-emden.ipynb
@@ -37,16 +37,24 @@
     "This is our main class that does the integration.  We initialize it with the polytopic index, and then it will integrate the system for us.  We can then plot it or get\n",
     "the parameters $\\xi_1$ and $-\\xi_1^2 d\\theta/d\\xi |_{\\xi_1}$\n",
     "\n",
-    "We estimate the radius, $\\xi_1$ each step and make sure that the next step does not take us past that estimate.  This prevents us from having negative $\\theta$ values.  Given a point $(\\xi_0, y_0)$, and the derivative at that point, $z_0 = dy/d\\xi |_{\\xi_0}$, we can write the equation of a line as:\n",
+    "We estimate the radius, $\\xi_1$ each step and make sure that the next step does not take us past that estimate.  This prevents us from having negative $\\theta$ values.  Given a point $(\\xi_p, \\theta(\\xi_p))$, and the derivative at that point, $\\theta^\\prime_p = d\\theta/d\\xi |_{\\xi_p}$, we can write the equation of a line as:\n",
     "\n",
     "\\begin{equation}\n",
-    "    y(\\xi) - y_0 = z_0 (\\xi - \\xi_0)\n",
+    "    \\theta(\\xi) - \\theta_p = \\theta^\\prime_p (\\xi - \\xi_p)\n",
     "\\end{equation}\n",
     "\n",
-    "Then we can ask when does $y$ become zero, finding:\n",
+    "![theta intercept](le_extrap.png)\n",
+    "\n",
+    "Then we can ask when does $\\theta$ become zero, finding:\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\xi = -\\frac{y_0}{z_0} + \\xi_0\n",
+    "    \\xi = -\\frac{\\theta_p}{\\theta^\\prime_p} + \\xi_p\n",
+    "\\end{equation}\n",
+    "\n",
+    "or in terms of $y$ and $z$, \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\xi = -\\frac{y_p}{z_p} + \\xi_p\n",
     "\\end{equation}\n",
     "\n",
     "This is our estimate of $\\xi_1$.  We then make sure our stepsize $h$ is small enough that we do not go beyond this estimate."
@@ -248,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
