--- a/content/basics/linear-algebra/la-basics.ipynb
+++ b/content/basics/linear-algebra/la-basics.ipynb
@@ -292,7 +292,7 @@
     "$$\\left | \\begin{array}{ccc} a & b & c \\\\\n",
     "                             d & e & f \\\\\n",
     "                             g & h & i \\end{array} \\right | =\n",
-    "                             a \\left | \\begin{array}{cc} e & f \\\\ h & i \\end{array} \\right | +\n",
+    "                             a \\left | \\begin{array}{cc} e & f \\\\ h & i \\end{array} \\right | -\n",
     "                             b \\left | \\begin{array}{cc} d & f \\\\ g & i \\end{array} \\right | +\n",
     "                             c \\left | \\begin{array}{cc} d & e \\\\ g & h \\end{array} \\right |$$\n",
     "\n",
